--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -33,6 +33,10 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
 
+     kotlinOptions {
+        jvmTarget = "17"
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
