--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.mymax.nfccompatibility">
-  <uses-permission android:name="android.permission.NFC"/>
+    package="com.mymax.nfccompatibility">
+    
+    <uses-permission android:name="android.permission.NFC"/>
+    
+    <application>
+    </application>
 </manifest>
