--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,6 +45,18 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+
+     subprojects {
+        afterEvaluate { project ->
+            if (project.hasProperty('android')) {
+                project.android {
+                    if (namespace == null) {
+                        namespace project.group
+                    }
+                }
+            }
+        }
+    }
 }
 
 dependencies {
