--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,14 +38,14 @@ android {
         disable 'InvalidPackage'
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
+    // compileOptions {
+    //     sourceCompatibility JavaVersion.VERSION_17
+    //     targetCompatibility JavaVersion.VERSION_17
+    // }
 
-    kotlinOptions {
-        jvmTarget = '17'
-    }
+    // kotlinOptions {
+    //     jvmTarget = '17'
+    // }
 }
 
 subprojects {
